[tool.poetry]
name = "pynecone"
version = "0.1.0"
description = ""
authors = [
    "Nikhil Rao <nikhil@pynecone.io>",
    "Alek Petuskey <alek@pynecone.io>",
]
include = ["templates/*"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
sqlmodel = "^0.0.6"
typer = "^0.4.1"
uvicorn = "^0.17.6"
pydantic = "1.9.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyright = "^1.1.229"
darglint = "^1.8.1"
pydocstyle = "^6.1.1"
uvicorn = "^0.17.6"
toml = "^0.10.2"
isort = "^5.10.1"

[tool.poetry.scripts]
pc = "pynecone.pc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]